# rootfinder

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  univariate_roots.rs  utils.rs
src/univariate_roots/: bisection.rs  newton.rs  root_bisection.rs
src/utils/: bracketing.rs  convergence_data.rs  enums.rs  perturb.rs  solver_settings.rs  termination.rs
