[package]
name = "rootfinder"
version = "0.3.0"
authors = ["Tamas Kis"]
edition = "2021"
description = "Root-finding methods for both univariate, scalar-valued functions and multivariate, vector-valued functions."
documentation = "https://docs.rs/rootfinder"
repository = "https://github.com/tamaskis/rootfinder"
license = "MIT OR Apache-2.0"

exclude = ["Cargo.lock", ".github/", ".vscode/", ".gitignore"]

[dependencies]
once_cell = "1.20.2"

[dev-dependencies]
numtest = "0.2.1"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]
