[package]
name = "rootfinder"
version = "0.4.1"
authors = ["Tamas Kis"]
edition = "2024"
description = "Root-finding methods for both univariate, scalar-valued functions and multivariate, vector-valued functions."
documentation = "https://docs.rs/rootfinder"
repository = "https://github.com/tamaskis/rootfinder"
license = "MIT OR Apache-2.0"

exclude = [".gitignore", ".github/", ".vscode/", "Cargo.lock", "book/"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]

[dependencies]
once_cell = "1.21.3"

[dev-dependencies]
numtest = "0.3.1"